--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ form fieldset a:hover { text-decoration: underline; }
 }
 
 .twitter-before {
-	background: #189bcb;
+	background: #b33d2f;
 	border-radius: 3px 0px 0px 3px;
 	color: #f4f4f4;
 	display: block;
@@ -133,7 +133,7 @@ form fieldset a:hover { text-decoration: underline; }
 
 
 .twitter {
-	background: #1bb2e9;
+	background: #dd4b39;
 	border: none;
 	border-radius: 0px 3px 3px 0px;
 	color: #f4f4f4;
