--- a/css/map.css
+++ b/css/map.css
@@ -1,11 +1,12 @@
 #map {
 	width: 100%;
+	height: 100%;
 	position: static;
 }
 body{
 	margin: 0;
 }
 #zone-btns{
-  position: absolute;
+  position: fixed;
   bottom: 5px;
 }
