--- a/css/map.css
+++ b/css/map.css
@@ -10,3 +10,7 @@ body{
   position: fixed;
   bottom: 5px;
 }
+.mdl-button--fab.mdl-button--colored {
+    background: #555555;
+    color: rgb(255,255,255);
+}
