--- a/css/map.css
+++ b/css/map.css
@@ -4,10 +4,13 @@
 	position: static;
 }
 .map-slot{
-	
+	background: #555;
+    padding-right: 7px !important;
+    padding-left: 7px !important;
 }
 body{
 	margin: 0;
+	background-color: #555 !important;
 }
 #zone-btns{
   position: fixed;
@@ -21,4 +24,49 @@ body{
 #blog-modal-content{
 	font-size: 3rem;
     margin-top: 10px;
+}
+
+.mdl-layout--fixed-header>.mdl-layout__header {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    box-shadow: 0px 0px 0px #000;
+    position: absolute;
+}
+
+.mdl-layout__header {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    min-height: 64px;
+    max-height: 1000px;
+    z-index: 3;
+    background-color: rgb(85, 85, 85);
+    color: rgb(255, 255, 255);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+    transition-duration: .2s;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-property: max-height,box-shadow;
+}
+
+.mdl-layout__header .mdl-layout__drawer-button {
+    margin: 4px;
+    color: #fff;
 }
